added the swagger docs for the exisiting apis
